fix collapse-item text

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -24,5 +24,6 @@
 
   .el-collapse-item__content {
     padding: 16px;
+    color: var(--c-text, #2c3e50);
   }
 }
